no. #3 | Unable to use image URL as external

--- a/source/_includes/custom/opengraph.html
+++ b/source/_includes/custom/opengraph.html
@@ -3,7 +3,7 @@
   <meta property="og:title" content="{{ title | strip_html }}" />
   <meta property="og:description" content="{{ description | strip_html | condense_spaces | truncate:150 }}" />
 {% if cover != empty %}
-  <meta property="og:image" content="{{ site.url }}{{ cover }}" />
+  <meta property="og:image" content="{{ cover }}" />
 {% endif %}
 
 {% if site.semantic_fb_app_id %}
