--- a/source/_includes/custom/semantic.html
+++ b/source/_includes/custom/semantic.html
@@ -1,4 +1,5 @@
 {% capture title %}{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}{% endcapture %}
 {% capture cover %}{% if page.cover %}{{page.cover}}{% elsif site.cover %}{{site.cover}}{% endif %}{% endcapture %}
+{% capture cover %}{% if cover contains 'http://' or cover contains 'https://' %}{{ cover }}{% elsif cover != empty %}{{site.url}}{{cover}}{% endif %}{% endcapture %}
 {% include custom/opengraph.html %}
 {% include custom/twitter_cards.html %}
